# vision-core

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .gitlab-ci.yml  .vc-secret-guard.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_HISTORY.md  Dockerfile  FAKE_AUDIT_REPORT.md  FUNCTIONAL_TEST_REPORT.md  HARDENING_V2_3_4_REPORT.md  LEIA-ME_INSTRUCOES.md  PROMPT_104_CLEANUP_AND_COVERAGE.md  PROMPT_98E_MISSION_TIMELINE.md  PROMPT_S89_TUTORIAL_QUOTA_SF.md  README.md  README_DOCKER_BOOTSTRAP.md  README_V2_3_3_COMPLETO_CORRIGIDO.md  README_V2_3_3_REALTIME_MODE.md  README_V2_3_UI_SYSTEM_PATCH.md  SDDF_FRONTEND_SPEC_V14.md  SDDF_SPEC.md  _check122_fresh.mjs  _check122_menu.mjs  _check122_prod.mjs  _deploy100_eb.py  _deploy101_eb.py  _deploy102_eb.py  _deploy105_eb.py  _deploy142_eb.py  _deploy145_eb.py  _deploy145hf3_eb.py  _deploy146_eb.py  _deploy149_eb.py  _deploy150_eb.py  _deploy154_eb.py  _deploy187_eb.py  (+90 more)
.github/: CODEOWNERS  smoke-test-s127.txt
.gitness/: pipeline.yml
.vision-memory/: remediation_events.jsonl
.vision-snapshots/: mission_01a52592-1779024408567.json  mission_01a52592-tx_b347d2993d2d-1779024409884.json  (+359 more)
vc-secret-guard/: Cargo.toml  README.md
vc-secret-guard/src/: categories.rs  entropy.rs  event.rs  lib.rs  main.rs  mask.rs  policy.rs  scanner.rs  stub.rs
vc-secret-guard/tests/: scan_test.rs
vc-secret-guard/tests/fixtures/: README.md  allowlist-policy.toml  allowlisted.txt  bearer_token.txt  clean.txt  connection_string.txt  credential_field.txt  fallback_credential_literal.txt  high_entropy_blob.txt  provider_key_prefix.txt
(+2339 files in other folders)
